remove visibility method to avoid some web override this setting

--- a/src/prep.css
+++ b/src/prep.css
@@ -1,17 +1,15 @@
-.hololink-toolbar-container {
-    visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: white;
-    display: flex;
-    width: 100px;
-    height: 30px;
-    flex-direction: row;
-    box-shadow: 2px 10px 16px 2px rgba(0,0,0,0.2);
-    border-radius: 5px;
-    justify-content: space-around;
-    border: 0.2px solid rgba(0,0,0,0.1);
+.hololink-toolbar-inner {
+    position: absolute !important;
+    background: white !important;
+    display: flex !important;
+    width: 100px !important;
+    height: 30px !important;
+    flex-direction: row !important;
+    box-shadow: 2px 10px 16px 2px rgba(0,0,0,0.2) !important;
+    border-radius: 5px !important;
+    justify-content: space-around !important;
+    border: 0.2px solid rgba(0,0,0,0.1) !important;
+    opacity: 1;
 }
 
 .hololink-toolbar-button{
